--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 						<div class="row">
 							<div class="col-md-3 col-md-offset-1">
 								<div class="center-block">
-									<div class="form-group label-floating" data-toggle="tooltip" data-placement="top" title="Ondalıkları virgül işareti ile ayırın">
+									<div class="form-group label-floating">
 										<label class="control-label">6. Sınıf</label>
 										<input type="number" class="form-control" id="ort-6" min="0" max="100" step="0.00001">
 									</div>
@@ -179,7 +179,7 @@
 							</div>
 							<div class="col-md-3">
 								<div class="center-block">
-									<div class="form-group label-floating" data-toggle="tooltip" data-placement="top" title="Ondalıkları virgül işareti ile ayırın">
+									<div class="form-group label-floating">
 										<label class="control-label">7. Sınıf</label>
 										<input type="number" class="form-control" id="ort-7" min="0" max="100" step="0.00001">
 									</div>
@@ -187,7 +187,7 @@
 							</div>
 							<div class="col-md-3">
 								<div class="center-block">
-									<div class="form-group label-floating" data-toggle="tooltip" data-placement="top" title="Ondalıkları virgül işareti ile ayırın">
+									<div class="form-group label-floating">
 										<label class="control-label">8. Sınıf</label>
 										<input type="number" class="form-control" id="ort-8" min="0" max="100" step="0.00001">
 									</div>
