--- a/index.html
+++ b/index.html
@@ -204,8 +204,10 @@
 						<div class="row">
 							<div class="col-md-4 col-md-offset-4 hidden" id="show-col">
 								<h2>Sonucunuz: </h2>
-								<h3 id="result-text"></h4>
 							</div>
+						</div>
+						<div class="row"> 
+							<h3 id="result-text"></h3>
 						</div>
 
 
