--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 								<h2>Sonucunuz: </h2>
 							</div>
 						</div>
-						<div class="row"> 
+						<div class="row result-div"> 
 							<h3 id="result-text"></h3>
 						</div>
 
