--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@
 <script src="assets/js/material-kit.js" type="text/javascript"></script>
 
 <script type="text/javascript">
+	$(document).ready(function() {
+    Materialize.updateTextFields();
+  });
 $('[data-toggle="tooltip"]').tooltip();
 
 function doldur() {
