--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@ function doldur() {
 	$('#ort-7').val(100);
 	$('#ort-8').val(99.8058615385);
 	hesapla();
+	Materialize.updateTextFields();
 }
 
 function hesapla() {
